--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.es.resx
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.es.resx
@@ -607,77 +607,14 @@ Soy su bot de Preguntas y respuestas que proporciona soporte a gente que interac
   </data>
   <data name="BotCommandAskExpert" xml:space="preserve">
     <value>Preguntar a un experto</value>
-    <comment>bots[0].commandLists[0].commands[1].title in manifest's translated files should match with this value.</comment>
-  </data>
-  <data name="BotCommandAskExpertDescription" xml:space="preserve">
-    <value>Conectar con un experto</value>
+    <comment>Bot command Ask an expert. This needs to be match with manifest's command "Ask an expert" in translated json file.</comment>
   </data>
   <data name="BotCommandFeedback" xml:space="preserve">
     <value>Compartir comentarios</value>
-    <comment>bots[0].commandLists[0].commands[2].title in manifest's translated files should match with this value.</comment>
-  </data>
-  <data name="BotCommandFeedbackDescription" xml:space="preserve">
-    <value>Enviar comentarios</value>
+    <comment>Bot command Share feedback. This needs to be match with manifest's command "Share feedback" in translated json file.</comment>
   </data>
   <data name="BotCommandTour" xml:space="preserve">
     <value>Visita guiada</value>
-    <comment>bots[0].commandLists[0].commands[0].title in manifest's translated files should match with this value.</comment>
-  </data>
-  <data name="BotCommandTourDescription" xml:space="preserve">
-    <value>Paseo por las características clave</value>
-  </data>
-  <data name="EndUserManifestLongDescription" xml:space="preserve">
-    <value>Un bot de preguntas y respuestas descriptiva que responde a las preguntas más frecuentes. Si no puede responder, le pondrá en contacto con un experto tan pronto como esté disponible.</value>
-  </data>
-  <data name="EndUserManifestShortDescription" xml:space="preserve">
-    <value>Un simpático bot de preguntas frecuentes que responde preguntas y le conecta con los expertos.</value>
-  </data>
-  <data name="EndUserTabName" xml:space="preserve">
-    <value>Ayuda</value>
-  </data>
-  <data name="ExpertManifestLongDescription" xml:space="preserve">
-    <value>Un bot de preguntas y respuestas descriptiva que responde a las preguntas más frecuentes. Si no puede responder, le pondrá en contacto con un experto tan pronto como esté disponible.</value>
-  </data>
-  <data name="ExpertManifestShortDescription" xml:space="preserve">
-    <value>Un simpático bot de preguntas frecuentes que responde preguntas y le conecta con los expertos.</value>
-  </data>
-  <data name="ExpertMEAddQuestionDescription" xml:space="preserve">
-    <value>Agregar un nuevo par de QnA</value>
-  </data>
-  <data name="ExpertMeAddQuestionTitle" xml:space="preserve">
-    <value>Agregar una nueva pregunta</value>
-  </data>
-  <data name="ExpertMEAssignedDescription" xml:space="preserve">
-    <value>Buscar solicitudes asignadas a un experto</value>
-  </data>
-  <data name="ExpertMEAssignedTitle" xml:space="preserve">
-    <value>Asignado</value>
-  </data>
-  <data name="ExpertMEKbDescription" xml:space="preserve">
-    <value>Buscar solicitudes recientes</value>
-  </data>
-  <data name="ExpertMeKbSearchParamDescription" xml:space="preserve">
-    <value>Buscar pares de KB QnA</value>
-  </data>
-  <data name="ExpertMEKbTitle" xml:space="preserve">
-    <value>Base de conocimientos</value>
-  </data>
-  <data name="ExpertMERecentDescription" xml:space="preserve">
-    <value>Buscar solicitudes recientes</value>
-  </data>
-  <data name="ExpertMERecentTitle" xml:space="preserve">
-    <value>Recientes</value>
-  </data>
-  <data name="ExpertMESearchParam" xml:space="preserve">
-    <value>Buscar</value>
-  </data>
-  <data name="ExpertMESearchParamDescription" xml:space="preserve">
-    <value>Buscar en los vales</value>
-  </data>
-  <data name="ExpertMEUnassignedDescription" xml:space="preserve">
-    <value>Buscar solicitudes sin asignar aún no asignadas a un experto</value>
-  </data>
-  <data name="ExpertMEUnassignedTitle" xml:space="preserve">
-    <value>Sin asignar</value>
+    <comment>Bot command Take a tour. This needs to be match with manifest's command "Take a tour" in translated json file.</comment>
   </data>
 </root>
