--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
@@ -607,77 +607,14 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
   </data>
   <data name="BotCommandAskExpert" xml:space="preserve">
     <value>Ask an expert</value>
-    <comment>bots[0].commandLists[0].commands[1].title in manifest's translated files should match with this value.</comment>
-  </data>
-  <data name="BotCommandAskExpertDescription" xml:space="preserve">
-    <value>Connect with an expert</value>
+    <comment>Bot command Ask an expert. This needs to be match with manifest's command "Ask an expert" in translated json file.</comment>
   </data>
   <data name="BotCommandFeedback" xml:space="preserve">
     <value>Share feedback</value>
-    <comment>bots[0].commandLists[0].commands[2].title in manifest's translated files should match with this value.</comment>
-  </data>
-  <data name="BotCommandFeedbackDescription" xml:space="preserve">
-    <value>Send feedback</value>
+    <comment>Bot command Share feedback. This needs to be match with manifest's command "Share feedback" in translated json file.</comment>
   </data>
   <data name="BotCommandTour" xml:space="preserve">
     <value>Take a tour</value>
-    <comment>bots[0].commandLists[0].commands[0].title in manifest's translated files should match with this value.</comment>
-  </data>
-  <data name="BotCommandTourDescription" xml:space="preserve">
-    <value>Tour of key features</value>
-  </data>
-  <data name="EndUserManifestLongDescription" xml:space="preserve">
-    <value>A friendly question and answer bot that answers commonly asked questions. If it can't answer, it will put you in touch with an expert as soon as they are available.</value>
-  </data>
-  <data name="EndUserManifestShortDescription" xml:space="preserve">
-    <value>A friendly FAQ bot that answers questions and connects you to experts.</value>
-  </data>
-  <data name="EndUserTabName" xml:space="preserve">
-    <value>Help</value>
-  </data>
-  <data name="ExpertManifestLongDescription" xml:space="preserve">
-    <value>A friendly question and answer bot that answers commonly asked questions. If it can't answer, it will put you in touch with an expert as soon as they are available.</value>
-  </data>
-  <data name="ExpertManifestShortDescription" xml:space="preserve">
-    <value>A friendly FAQ bot that answers questions and connects you to experts.</value>
-  </data>
-  <data name="ExpertMEAddQuestionDescription" xml:space="preserve">
-    <value>Add a new qna pair</value>
-  </data>
-  <data name="ExpertMeAddQuestionTitle" xml:space="preserve">
-    <value>Add new question</value>
-  </data>
-  <data name="ExpertMEAssignedDescription" xml:space="preserve">
-    <value>Search requests assigned to an expert</value>
-  </data>
-  <data name="ExpertMEAssignedTitle" xml:space="preserve">
-    <value>Assigned</value>
-  </data>
-  <data name="ExpertMEKbDescription" xml:space="preserve">
-    <value>Search recent requests</value>
-  </data>
-  <data name="ExpertMeKbSearchParamDescription" xml:space="preserve">
-    <value>Search KB QnA pairs</value>
-  </data>
-  <data name="ExpertMEKbTitle" xml:space="preserve">
-    <value>Knowledge base</value>
-  </data>
-  <data name="ExpertMERecentDescription" xml:space="preserve">
-    <value>Search recent requests</value>
-  </data>
-  <data name="ExpertMERecentTitle" xml:space="preserve">
-    <value>Recent</value>
-  </data>
-  <data name="ExpertMESearchParam" xml:space="preserve">
-    <value>Search</value>
-  </data>
-  <data name="ExpertMESearchParamDescription" xml:space="preserve">
-    <value>Search tickets</value>
-  </data>
-  <data name="ExpertMEUnassignedDescription" xml:space="preserve">
-    <value>Search unassigned requests not yet assigned to an expert</value>
-  </data>
-  <data name="ExpertMEUnassignedTitle" xml:space="preserve">
-    <value>Unassigned</value>
+    <comment>Bot command Take a tour. This needs to be match with manifest's command "Take a tour" in translated json file.</comment>
   </data>
 </root>
