--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.ru.resx
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.ru.resx
@@ -607,77 +607,14 @@
   </data>
   <data name="BotCommandAskExpert" xml:space="preserve">
     <value>Вопрос специалисту</value>
-    <comment>bots[0].commandLists[0].commands[1].title in manifest's translated files should match with this value.</comment>
-  </data>
-  <data name="BotCommandAskExpertDescription" xml:space="preserve">
-    <value>Связаться со специалистом</value>
+    <comment>Bot command Ask an expert. This needs to be match with manifest's command "Ask an expert" in translated json file.</comment>
   </data>
   <data name="BotCommandFeedback" xml:space="preserve">
     <value>Отправить отзыв</value>
-    <comment>bots[0].commandLists[0].commands[2].title in manifest's translated files should match with this value.</comment>
-  </data>
-  <data name="BotCommandFeedbackDescription" xml:space="preserve">
-    <value>Отправить отзыв</value>
+    <comment>Bot command Share feedback. This needs to be match with manifest's command "Share feedback" in translated json file.</comment>
   </data>
   <data name="BotCommandTour" xml:space="preserve">
     <value>Обзор</value>
-    <comment>bots[0].commandLists[0].commands[0].title in manifest's translated files should match with this value.</comment>
-  </data>
-  <data name="BotCommandTourDescription" xml:space="preserve">
-    <value>Обзор основных функций</value>
-  </data>
-  <data name="EndUserManifestLongDescription" xml:space="preserve">
-    <value>Простой в использовании бот вопросов и ответов, который отвечает на часто задаваемые вопросы. Если бот не сможет ответить на вопрос, он свяжет вас с первым освободившимся специалистом.</value>
-  </data>
-  <data name="EndUserManifestShortDescription" xml:space="preserve">
-    <value>Простой в использовании бот вопросов и ответов, который отвечает на вопросы и связывает со специалистами.</value>
-  </data>
-  <data name="EndUserTabName" xml:space="preserve">
-    <value>Справка</value>
-  </data>
-  <data name="ExpertManifestLongDescription" xml:space="preserve">
-    <value>Простой в использовании бот вопросов и ответов, который отвечает на часто задаваемые вопросы. Если бот не сможет ответить на вопрос, он свяжет вас с первым освободившимся специалистом.</value>
-  </data>
-  <data name="ExpertManifestShortDescription" xml:space="preserve">
-    <value>Простой в использовании бот вопросов и ответов, который отвечает на вопросы и связывает со специалистами.</value>
-  </data>
-  <data name="ExpertMEAddQuestionDescription" xml:space="preserve">
-    <value>Добавить новую пару вопросов и ответов</value>
-  </data>
-  <data name="ExpertMeAddQuestionTitle" xml:space="preserve">
-    <value>Добавить новый вопрос</value>
-  </data>
-  <data name="ExpertMEAssignedDescription" xml:space="preserve">
-    <value>Поиск запросов, назначенных специалисту</value>
-  </data>
-  <data name="ExpertMEAssignedTitle" xml:space="preserve">
-    <value>Назначенные</value>
-  </data>
-  <data name="ExpertMEKbDescription" xml:space="preserve">
-    <value>Поиск последних запросов</value>
-  </data>
-  <data name="ExpertMeKbSearchParamDescription" xml:space="preserve">
-    <value>Поиск пар вопросов и ответов в базе знаний</value>
-  </data>
-  <data name="ExpertMEKbTitle" xml:space="preserve">
-    <value>База знаний</value>
-  </data>
-  <data name="ExpertMERecentDescription" xml:space="preserve">
-    <value>Поиск последних запросов</value>
-  </data>
-  <data name="ExpertMERecentTitle" xml:space="preserve">
-    <value>Последние</value>
-  </data>
-  <data name="ExpertMESearchParam" xml:space="preserve">
-    <value>Поиск</value>
-  </data>
-  <data name="ExpertMESearchParamDescription" xml:space="preserve">
-    <value>Поиск запросов</value>
-  </data>
-  <data name="ExpertMEUnassignedDescription" xml:space="preserve">
-    <value>Поиск запросов, не назначенных специалисту</value>
-  </data>
-  <data name="ExpertMEUnassignedTitle" xml:space="preserve">
-    <value>Неназначенные</value>
+    <comment>Bot command Take a tour. This needs to be match with manifest's command "Take a tour" in translated json file.</comment>
   </data>
 </root>
