--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.zh-TW.resx
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.zh-TW.resx
@@ -607,77 +607,14 @@
   </data>
   <data name="BotCommandAskExpert" xml:space="preserve">
     <value>詢問專家</value>
-    <comment>bots[0].commandLists[0].commands[1].title in manifest's translated files should match with this value.</comment>
-  </data>
-  <data name="BotCommandAskExpertDescription" xml:space="preserve">
-    <value>與專家聯繫</value>
+    <comment>Bot command Ask an expert. This needs to be match with manifest's command "Ask an expert" in translated json file.</comment>
   </data>
   <data name="BotCommandFeedback" xml:space="preserve">
     <value>分享意見反應</value>
-    <comment>bots[0].commandLists[0].commands[2].title in manifest's translated files should match with this value.</comment>
-  </data>
-  <data name="BotCommandFeedbackDescription" xml:space="preserve">
-    <value>傳送意見反應</value>
+    <comment>Bot command Share feedback. This needs to be match with manifest's command "Share feedback" in translated json file.</comment>
   </data>
   <data name="BotCommandTour" xml:space="preserve">
     <value>導覽</value>
-    <comment>bots[0].commandLists[0].commands[0].title in manifest's translated files should match with this value.</comment>
-  </data>
-  <data name="BotCommandTourDescription" xml:space="preserve">
-    <value>主要功能導覽</value>
-  </data>
-  <data name="EndUserManifestLongDescription" xml:space="preserve">
-    <value>友善的問答 Bot，可回答常見問題。若無法回答，它會協助您聯繫有空的專家。</value>
-  </data>
-  <data name="EndUserManifestShortDescription" xml:space="preserve">
-    <value>友善的常見問題集 Bot，能回答問題並讓您與專家聯繫。</value>
-  </data>
-  <data name="EndUserTabName" xml:space="preserve">
-    <value>說明</value>
-  </data>
-  <data name="ExpertManifestLongDescription" xml:space="preserve">
-    <value>友善的問答 Bot，可回答常見問題。若無法回答，它會協助您聯繫有空的專家。</value>
-  </data>
-  <data name="ExpertManifestShortDescription" xml:space="preserve">
-    <value>友善的常見問題集 Bot，能回答問題並讓您與專家聯繫。</value>
-  </data>
-  <data name="ExpertMEAddQuestionDescription" xml:space="preserve">
-    <value>新增問答配對</value>
-  </data>
-  <data name="ExpertMeAddQuestionTitle" xml:space="preserve">
-    <value>新增問題</value>
-  </data>
-  <data name="ExpertMEAssignedDescription" xml:space="preserve">
-    <value>搜尋已指派給專家的要求</value>
-  </data>
-  <data name="ExpertMEAssignedTitle" xml:space="preserve">
-    <value>已指派</value>
-  </data>
-  <data name="ExpertMEKbDescription" xml:space="preserve">
-    <value>搜尋最近的要求</value>
-  </data>
-  <data name="ExpertMeKbSearchParamDescription" xml:space="preserve">
-    <value>搜尋知識庫問答配對</value>
-  </data>
-  <data name="ExpertMEKbTitle" xml:space="preserve">
-    <value>知識庫</value>
-  </data>
-  <data name="ExpertMERecentDescription" xml:space="preserve">
-    <value>搜尋最近的要求</value>
-  </data>
-  <data name="ExpertMERecentTitle" xml:space="preserve">
-    <value>最近</value>
-  </data>
-  <data name="ExpertMESearchParam" xml:space="preserve">
-    <value>搜尋</value>
-  </data>
-  <data name="ExpertMESearchParamDescription" xml:space="preserve">
-    <value>搜尋票證</value>
-  </data>
-  <data name="ExpertMEUnassignedDescription" xml:space="preserve">
-    <value>搜尋尚未指派給專家的未指派要求</value>
-  </data>
-  <data name="ExpertMEUnassignedTitle" xml:space="preserve">
-    <value>未指派</value>
+    <comment>Bot command Take a tour. This needs to be match with manifest's command "Take a tour" in translated json file.</comment>
   </data>
 </root>
